# data-preperation-new

./: EAD ghc.ipynb  EAD jst.ipynb  Makefile  README.md  docker-compose.yaml  pyproject.toml
cybulde/: proces_data.py  process_data.py  test.py
cybulde/config_schemas/: data_processing_config_schema.py
cybulde/config_schemas/dask_cluster/: dask_cluster_schema.py
cybulde/config_schemas/data_processing/: dataset_cleaners_schema.py  dataset_readers_schema.py
cybulde/configs/: data_processing_config.yaml
cybulde/configs/dask_cluster/: local_dask_cluster.yaml
cybulde/configs/dataset_cleaner_manager/: simple_dataset_cleaner.yaml
cybulde/configs/dataset_cleaner_manager/dataset_cleaner/: character_limit_280.yaml
cybulde/configs/dataset_reader_manager/: ghc_jigsaw_twitter.yaml
cybulde/configs/dataset_reader_manager/dataset_reader/: ghc.yaml
cybulde/configs/dataset_reader_manager/dataset_readers/: jtc.yaml  twitter.yaml
cybulde/data_processing/: dataset_cleaners.py  dataset_readers.py
cybulde/utils/: aws_utils.py  data_utils.py  utils.py
docker/: Dockerfile
notebooks/: EAD ghc.ipynb  EAD jst.ipynb  EAD twitter.ipynb  spellcorrection.ipynb
